# ComfyUI-FaceCalloutNode

./: FaceCalloutNode.py  IntegratedFaceCompositeNode.py  IsolatedFaceCalloutNode.py  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
example_workflows/: example_workflows.png.json
