[project]
name = "facecalloutnode"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/theshubzworld/ComfyUI-FaceCalloutNode"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-FaceCalloutNode"
Icon = ""
